2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.solaris2: Update.

2011-05-19  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)

	* include/private/gcconfig.h (end, InitStackBottom): Declare
	extern variable for RTEMS.
	* include/private/gcconfig.h (DATASTART, DATAEND, STACKBOTTOM):
	Update (for RTEMS).
	* include/private/gcconfig.h (DATAEND): Fix a typo in the macro
	name (for RTEMS).
	* tests/test.c (CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER):
	Replace with CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER (for RTEMS).

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Enable for Solaris in
	single-threaded environment.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Undefine if PROC_VDB.
	* tests/test.c (NUMBER_ROUND_UP): New macro.
	* tests/test.c (check_heap_stats): Round up total expected heap
	size to the nearest 4 MiB bound.
	* tests/test.c (check_heap_stats): Print the current and expected
	heap sizes in case of failure.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* checksums.c (GC_check_blocks, GC_check_dirty): Do log printing
	only if GC_print_stats; print errors using GC_err_printf.
	* checksums.c (GC_check_blocks): Join adjacent printf() calls into
	a single one.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (pthread_join): Add assertion (check thread is
	finished).
	* pthread_support.c (GC_register_my_thread): Don't detach the
	thread if invoked from the thread destructor.
	* win32_threads.c (GC_register_my_thread): Ditto.
	* win32_threads.c (GC_unregister_my_thread): Don't delete the
	thread (just set FINISHED) if the thread is not detached (only if
	GC_PTHREADS); add assertion (check the thread is not finished).
	* tests/threadkey_test.c (main): Join some created threads.

2011-05-17  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_delete_gc_thread): Rename "gc_id" local
	variable to "t".